<resources>
    <string name="app_name">VikaramjeetSinghAssignment1</string>
    <string name="theshoppy">TheShoppy</string>
    <string name="buy_with_these">Buy with these :</string>
    <string name="select_brand">Select Brand :</string>
    <string name="select_type_of_computer">Select type of Computer :</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="select_province">Select Province</string>
    <string name="laptop">Laptop</string>
    <string name="desktop">Desktop</string>
    <string name="ssd">SSD</string>
    <string name="printer">Printer</string>
    <string name="add_peripherals">Add Peripherals :</string>
    <string name="buy_now">Buy Now</string>
    <string name="invoice">Invoice</string>
    <string name="invoiceHeader">Invoice</string>
</resources>