<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/labelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/theshoppy"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editTextPersonName"
            android:layout_width="900px"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20px"
            android:layout_marginTop="40px"
            android:layout_marginEnd="20px"
            android:ems="10"
            android:foregroundGravity="center"
            android:gravity="center"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="600px"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20px"
            android:layout_marginTop="20px"
            android:layout_marginEnd="20px"
            android:completionThreshold="2"
            android:foregroundGravity="center"
            android:gravity="center"
            android:hint="@string/select_province" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50px"
            android:layout_marginTop="40px"
            android:layout_marginEnd="50px"
            android:text="@string/select_type_of_computer"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50px"
            android:layout_marginEnd="50px">

            <RadioButton
                android:id="@+id/desktopRadioBtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20px"
                android:layout_marginEnd="20px"
                android:text="@string/desktop" />

            <RadioButton
                android:id="@+id/laptopRadioBtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20px"
                android:layout_marginEnd="20px"
                android:layout_weight="1"
                android:text="@string/laptop" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="300px"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/select_brand" />

            <Spinner
                android:id="@+id/brandSpinner"
                android:layout_width="350px"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40px"
            android:layout_marginEnd="20dp"
            android:text="@string/buy_with_these"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/ssdCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10px"
            android:layout_marginEnd="20dp"
            android:text="@string/ssd" />

        <CheckBox
            android:id="@+id/printerCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/printer" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/add_peripherals" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <RadioButton
                android:id="@+id/item1RadioBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="item1"
                android:visibility="gone" />

            <RadioButton
                android:id="@+id/item2RadioBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="item2"
                android:visibility="gone" />

            <RadioButton
                android:id="@+id/item3RadioBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="item3"
                android:visibility="gone" />
        </RadioGroup>

        <Button
            android:id="@+id/buyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:text="@string/buy_now" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/invoiceHeader"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/invoiceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:background="#BDB6B6"
            android:gravity="left"
            android:inputType="textMultiLine"
            android:padding="20px"
            android:textSize="18sp" />


    </LinearLayout>

</ScrollView>